# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-FileCopyrightText: © 2023 Siemens AG
# SPDX-License-Identifier: MIT

[package]
name = "edgeless_http"
version = "1.1.0"
authors = [ "Raphael Hetzel <hetzel@in.tum.de>" ]
edition = "2021"
description = "Utility structures and methods for HTTP bindings"
homepage = "https://edgeless-project.eu/"
license = "MIT"
repository = "https://github.com/edgeless-project/edgeless/"
readme = "../README.md"

[lib]
name = "edgeless_http"
path = "src/lib.rs"

[lints.clippy]
uninlined_format_args = "allow"

[features]
hyper = ["dep:hyper"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
hyper = { version = "1.0.0-rc.4", features = ["full"], optional = true }