# SPDX-FileCopyrightText: © 2023 TUM
# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-License-Identifier: MIT
[package]
name = "edgeless_node"
version = "0.1.0"
authors = ["Raphael Hetzel <hetzel@in.tum.de"]
edition = "2021"

[lib]
name = "edgeless_node"
path = "src/lib.rs"

[[bin]]
name = "edgeless_node_d"
path = "src/bin/edgeless_node_d.rs"

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
uuid = {version= "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
wasmtime = {version = "10", features=["component-model", "wat"]}
wasmtime-wasi = { version = "10" }
serde = "1.0"
serde_json = "1.0"
clap = { version = "4.3", features=["derive"] }
toml = "0.7"
edgeless_api = {path = "../edgeless_api", features = ["grpc_impl"]}
edgeless_function = { path = "../edgeless_function" }
edgeless_telemetry = { path = "../edgeless_telemetry" }
edgeless_dataplane = { path = "../edgeless_dataplane" }
edgeless_http = {path = "../edgeless_http", features = ["hyper"]}
hyper = { version = "1.0.0-rc.4", features = ["full"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
reqwest = { version = "0.11" }
http-body-util = "0.1.0-rc.3" 
redis = "*"
openssl = { version = "0.10", features = ["vendored"] }
