# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-License-Identifier: MIT
[package]
name = "edgeless_node"
version = "0.1.0"
authors = ["Raphael Hetzel <hetzel@in.tum.de>"]
edition = "2021"
rust-version = "1.76"

[lib]
name = "edgeless_node"
path = "src/lib.rs"

[[bin]]
name = "edgeless_node_d"
path = "src/bin/edgeless_node_d.rs"

[features]
default = ["wasmtime"]

# WASM runtime; You can only pick one!
wasmtime = ["dep:wasmtime"]
wasmi = ["dep:wasmi"]

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
uuid = {version= "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
wasmtime = {version = "18", optional = true}
serde = "1.0"
serde_json = "1.0"
clap = { version = "4.3", features=["derive"] }
toml = "0.7"
edgeless_api = {path = "../edgeless_api", features = ["grpc_impl"]}
edgeless_telemetry = { path = "../edgeless_telemetry" }
edgeless_dataplane = { path = "../edgeless_dataplane" }
edgeless_http = {path = "../edgeless_http", features = ["hyper"]}
hyper = { version = "1.2", features = ["full"]}
hyper-util = { version = "0.1", features = ["tokio"]}
reqwest = { version = "0.11" }
http-body-util = "0.1.0-rc.3" 
redis = "*"
openssl = { version = "0.10", features = ["vendored"] }
sysinfo = "0.30.12"
wasmi = {version = "0.31", default-features = false , optional = true}
tonic = "0.10.2"
prost = "0.12"
base64 = "0.21.5"
rs-docker = "0.0.58"
chrono = "0.4.38"
ollama-rs = { version = "0.2.0", features = ["chat-history"] }
rand = "0.8"

[build-dependencies]
tonic-build = "0.10"
