[package]
name = "edgeless_orc"
version = "0.1.0"
authors = ["Raphael Hetzel <hetzel@in.tum.de"]
edition = "2021"

[lib]
name = "edgeless_orc"
path = "src/lib.rs"

[[bin]]
name = "edgeless_orc_d"
path = "src/bin/edgeless_orc_d.rs"

[dependencies]
log = "0.4"
uuid = {version= "1.3", features = ["v4"] }
edgeless_agent_api = {path = "../edgeless_agent_api", features = ["grpc_impl"]}