# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-FileCopyrightText: © 2023 Siemens AG
# SPDX-License-Identifier: MIT
[package]
name = "edgeless_orc"
version = "0.1.0"
authors = ["Raphael Hetzel <hetzel@in.tum.de>"]
edition = "2021"

[lib]
name = "edgeless_orc"
path = "src/lib.rs"

[[bin]]
name = "edgeless_orc_d"
path = "src/bin/edgeless_orc_d.rs"

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
uuid = {version= "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
edgeless_api = {path = "../edgeless_api", features = ["grpc_impl"]}
serde = "1.0"
clap = { version = "4.3", features=["derive"] }
toml = "0.7"
rand = "0.8.5"
serial_test = { version = "3" }