# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-FileCopyrightText: © 2023 Siemens AG
# SPDX-License-Identifier: MIT

[package]
name = "edgeless_orc"
version = "1.1.0"
authors = [ "Claudio Cicconetti <c.cicconetti@iit.cnr.it>", "Lukasz Zalewski <zalewski.lukasz@siemens.com>", "Raphael Hetzel <hetzel@in.tum.de>" ]
edition = "2021"
description = "Reference implementation of EDGELESS ε-ORC"
homepage = "https://edgeless-project.eu/"
license = "MIT"
repository = "https://github.com/edgeless-project/edgeless/"
readme = "../README.md"

[lib]
name = "edgeless_orc"
path = "src/lib.rs"

[lints.clippy]
uninlined_format_args = "allow"

[[bin]]
name = "edgeless_orc_d"
path = "src/bin/edgeless_orc_d.rs"

[[bin]]
name = "proxy_cli"
path = "src/bin/proxy_cli.rs"

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
uuid = {version= "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
edgeless_api = {path = "../edgeless_api", features = ["grpc_impl"]}
edgeless_dataplane = { path = "../edgeless_dataplane" }
serde = "1.0"
serde_json = "1"
clap = { version = "4.3", features=["derive"] }
toml = "0.7"
rand = "0.8.5"
redis = "0.27.6"
serial_test = { version = "3" }
itertools = "0.13.0"
chrono = "0.4.38"