# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-License-Identifier: MIT
[package]
name = "edgeless_state"
version = "0.1.0"
authors = ["Chen Chen <cc2181@cam.ac.uk>"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "edgeless_state"
path = "src/edgeless_state.rs"

[lib]
name = "edgeless_state"
path = "src/lib.rs"

# [patch.crates-io]
# libsqlite3-sys = { path = "./dummy-libsqlite3-sys" }

[dependencies]
# note use sqlx 0.8.1 will inccur cargo issue
sqlx = { version = "0.7.0", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = { version = "1.20.0", features = ["macros"]}

[build-dependencies]
schemars = "0.8.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
