# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-License-Identifier: MIT

[package]
name = "edgeless_systemtests"
version = "1.0.0"
authors = [ "Claudio Cicconetti <c.cicconetti@iit.cnr.it>" ]
edition = "2021"
description = "Tests of EDGELESS components deployed in a system fashion"
homepage = "https://edgeless-project.eu/"
license = "MIT"
repository = "https://github.com/edgeless-project/edgeless/"
readme = "../README.md"

[lib]
name = "edgeless_systemtests"
path = "src/lib.rs"

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
uuid = {version= "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
wasmtime = {version = "10", features=["component-model", "wat"]}
wasmtime-wasi = { version = "10" }
clap = { version = "4.3", features=["derive"] }
toml = "0.7"
edgeless_api = {path = "../edgeless_api" }
edgeless_dataplane = {path = "../edgeless_dataplane"  }
edgeless_bal = {path = "../edgeless_bal" }
edgeless_con = {path = "../edgeless_con" }
edgeless_orc = {path = "../edgeless_orc" }
edgeless_node = {path = "../edgeless_node" }
redis = "*"
serial_test = { version = "3" }