# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-License-Identifier: MIT
[package]
name = "edgeless_telemetry"
version = "0.1.0"
authors = ["Raphael Hetzel <hetzel@in.tum.de>"]
edition = "2021"

[lib]
name = "edgeless_telemetry"
path = "src/lib.rs"

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
uuid = {version= "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
serde = "1.0"
serde_json = "1.0"
clap = { version = "4.3", features=["derive"] }
toml = "0.7"
edgeless_api = {path = "../edgeless_api", features = ["grpc_impl"]}
prometheus-client = "0.21"
warp = "0.3.5"