# SPDX-FileCopyrightText: © 2024 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-License-Identifier: MIT

[workspace]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true

[package]
name = "bench_mapreduce"
version = "0.2.0"
authors = ["Claudio Cicconetti <c.cicconetti@iit.cnr.it>"]
edition = "2024"

[lib]
name = "bench_mapreduce"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
edgeless_function = { path = "../../edgeless_function" }
base64 = "0.22.1"