# SPDX-FileCopyrightText: © 2024 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-License-Identifier: MIT

[workspace]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true

[package]
name = "bench_process"
version = "0.1.0"
authors = ["Claudio Cicconetti <c.cicconetti@iit.cnr.it>"]
edition = "2024"

[lib]
name = "bench_process"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
edgeless_function = { path = "../../edgeless_function" }
num-bigint = "0.4.6"
