# SPDX-FileCopyrightText: © 2024 Siemens AG
# SPDX-License-Identifier: MIT
[workspace]

[profile.release]
lto = true
opt-level = "s"

[package]
name = "dda_store_test"
version = "0.1.0"
authors = ["Lukasz Zalewski <zalewski.lukasz@siemens.com>"]
edition = "2021"

[lib]
name = "dda_store_test"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
edgeless_function = { path = "../../edgeless_function" }
edgeless_http = { path = "../../edgeless_http" }
dda = { path = "../../edgeless_dda" }
log = "0.4"
prost = "0.13"
base64 = "0.22.1"
serde = "1.0.204"
serde_json = "1.0"
rand = { version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
prost-build = "0.13"
